# CheckersGame

./: readme.md
UTP_s31722_Eng_Cpp/: Board_GameStateJNI.cpp  CMakeLists.txt  GameState.cpp  GameState.h  Piece.cpp  Piece.h
UTP_s31722_Eng_Java/src/: GameWindow.java  Main.java
UTP_s31722_Eng_Java/src/Board/: BoardView.java  Board_GameStateJNI.h  GameStateJNI.java  IGameState.java
UTP_s31722_Eng_Java/src/JUnit5_Tests/: JUnitTests.java
libs/: libs31722_Checkers_Engine_lib.dylib
